--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -12,7 +12,7 @@
 		<div>
 			<div class="main-app-view">
 				<div id="u207_div" class=""></div>
-
+<!--Just a comment-->
 				<div id="logoContainer">
             		<p><span>LOGO</span></p>
         		</div>
