--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -18,12 +18,12 @@
 	<body>
 			<div class="container">
                 <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <div class="row top-buffer">
-    				    <div class="col-md-offset-5 col-sm-offset-5">
-                		  <span class="glyphicon glyphicon-camera logo" aria-hidden="true"></span>
-            		    </div>
+                    <div class="row">
+                        <div class="col-md-offset-0 col-sm-offset-0">
+                          <img src="data/logo.png" class="logo login-logo" ></img>
+                        </div>
                     </div>
-        		    <div class="row top-buffer">
+        		    <div class="row">
                                 <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
                     			 <span class="glyphicon glyphicon-picture user-photo" aria-hidden="true"></span>
                                 </div>
@@ -31,29 +31,29 @@
                     			 <button type="button" class="btn btn-default add-photo-button">Add Photo</button>
                         </div>
         		    </div>
-                <div class="row top-buffer">
+                <div class="row top-buffer-medium">
                     <form class="form-horizontal">
                         <div class="form-group">
                             <!--<label for="inputFN">First Name</label>-->
-                    		<input id="inputFN" class="form-control" type="text" name="firstName" value="FIRST NAME">
+                    		<input id="inputFN" class="form-control" type="text" name="firstName" placeholder="FIRST NAME">
                         </div>
                         <div class="form-group">
-                    		<input id="inputLN" class="form-control" type="text" name="lastName" value="LAST NAME">
+                    		<input id="inputLN" class="form-control" type="text" name="lastName" placeholder="LAST NAME">
                         </div>
                         <div class="form-group">
-                    		<input id="inputMail" class="form-control" type="email" name="lastName" value="EMAIL">
+                    		<input id="inputMail" class="form-control" type="email" name="lastName" placeholder="EMAIL">
                         </div>
                         <div class="form-group">
                     		<!-- NA RAZIE TYPE="text", PONIEWAŻ PASSWORD KROPKUJE VALUE-->
-                    		<input id="password" class="form-control" type="text" name="password" value="PASSWORD">
+                    		<input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
                         </div>
                         <div class="form-group">
-                            <input id="confPassword" class="form-control" type="text" name="confirmPassword" value="CONFIRM PASSWORD">
+                            <input id="confPassword" class="form-control" type="text" name="confirmPassword" placeholder="CONFIRM PASSWORD">
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 col-md-2 control-label">Birthdate</label>
                             <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
-                    		  <input id="date" class="form-control" type="date" name="birthdate" value="date">
+                    		  <input id="date" class="form-control" type="date" name="birthdate" placeholder="date">
                             </div>
                         </div>
                         <div class="form-group">
@@ -73,14 +73,15 @@
                         </label>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-4 col-md-offset-4">
-                                <button type="submit" class="btn btn-primary">Sign me up</button>
+                            <div class="col-sm-offset-0 col-md-offset-0">
+                                <button type="submit" class="btn btn-primary submit-button">Sign me up</button>
                             </div>
                         </div>
+                        <div class="form-group">
+                                <div class="text-center">
+                                <h5>PaczPaczCar 2018</h5>
+                            </div>
                         </form>
-                        <div class="col-sm-offset-3 col-md-offset-3">
-                        <h5>PaczPaczCar 2018</h5>
-                        </div>
                     </div>
 			</div>
 	</body>
