--- a/SenderPage.html
+++ b/SenderPage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>DeliverPage</title>
+		<title>SenderPAge</title>
     	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	<link href="data/DeliverPage.css" type="text/css" rel="stylesheet"/>
+    	<link href="data/SenderPage.css" type="text/css" rel="stylesheet"/>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -31,24 +31,24 @@
                 <div class="row top-buffer">
                     <form class="form-horizontal">
                         <div class="panel panel-default">
-                            <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN OUR NEIGHBOURHOOD</div>
+                            <div class="panel-body" id="boxes">Deliverers in your near area</div>
                         </div>
 
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 1 </li>
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 2</li>
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 3</li>
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 4</li>
-                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 5</li>
+                            <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 1 </li>
+                            <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 2</li>
+                            <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 3</li>
+                            <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 4</li>
+                            <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 5</li>
                         </ul>
 
 
                         <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
                             <div class="form-group">
-                                <button id="button" type="submit" >SUMBIT YOUR OFFER</button>
+                                <button id="button" type="submit" >SEND A PACK</button>
                             </div>
                             <div class="form-group">
-                                <button id="button" type="submit" >BACK</button>
+                                <button id="button" type="submit" >BACK TO LANDING PAGE</button>
                             </div>
                         </div>
                     </form>
