--- a/SuccesDeliveryPage.html
+++ b/SuccesDeliveryPage.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RegisterPage</title>
+    <title>SuccessOrder</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
-    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
+    <link href="data/SuccessSending.css" type="text/css" rel="stylesheet"/>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
     <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
+        <div class="row top-buffer">
+            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">a
+                <span class="glyphicon glyphicon-search search"></span>
+            </div>
+            <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
+                <span class="glyphicon glyphicon-user search"></span>
+            </div>
+        </div>
+        <hr width="100%" />
+
+        <div class="row top-buffer"></div>
+
 
         <div class="row top-buffer">
             <form class="form-horizontal">
-                <div class="top-buffer icon-container">
-                    <div class="col-md-offset-5 col-sm-offset-5 col-xs-4 ">
-                        <span class="glyphicon glyphicon-ok logo" aria-hidden="true"></span>
+
+                <div class="panel panel-default">
+                    <div class="panel-body" id="boxes">
+                        <span class="glyphicon glyphicon-ok search"></span><br>
+                        <span>You succesfully order a package</span>
                     </div>
                 </div>
 
-                <div class="row top-buffer message-container">
-                    <div class="col-md-offset-5 col-sm-offset-5">
-                        <span>You successfully order a package to be delivered!</span>
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-md-offset-4">
-                        <button type="submit" class="btn min-btn-width">BACK TO ORDER</button>
+                <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
+                    <div class="form-group">
+                        <button  type="submit" class="btn btn-primary">CONTINUE ORDERING</button>
                     </div>
-                </div>
-
-                <div class="form-group fixed-bottom">
-                    <div class="col-sm-offset-4 col-md-offset-4">
-                        <button type="submit" class="btn min-btn-width">GO TO MENU</button>
+                    <div class="form-group">
+                        <button  type="submit" class="btn">BACK TO MENU</button>
                     </div>
                 </div>
             </form>
-            <footer class="col-sm-offset-3 col-md-offset-3 fixed-bottom">
+            <div class="col-sm-offset-3 col-md-offset-3">
                 <h5>PaczPaczCar 2018</h5>
-            </footer>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
