--- a/SuccesDeliveryPage.html
+++ b/SuccesDeliveryPage.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
         <div class="row top-buffer">
-            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">a
+            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
                 <span class="glyphicon glyphicon-search search"></span>
             </div>
             <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
