--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -15,6 +15,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <link href="data/FulfillmentOfTheOrder_SenderPage.css" type="text/css" rel="stylesheet"/>
+
 	</head>
 	<body>
 			<div class="container">
@@ -39,19 +40,19 @@
 		                            </div>
 	                            </div>
 	                        </div>-->  
-	                        <div class="form-group">
+	                        <div class="form-group">Offerd price
                         		<input id="offeredPrice" class="form-control" type="text" name="offeredPrice" value="OFFERED PRICE (PLN)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Pack Mass
                         		<input id="mass" class="form-control" type="text" name="mass" value="MASS (kg)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Pack Height
                         		<input id="height" class="form-control" type="text" name="height" value="HEIGHT (cm)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Pack Width
                         		<input id="width" class="form-control" type="text" name="width" value="WIDTH (cm)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Pack length
                         		<input id="length" class="form-control" type="text" name="length" value="LENGTH (cm)">
                             </div>
                             <div class="reset-margin-bottom form-group">
@@ -60,34 +61,54 @@
                             <div class="form-group">
                         		<input id="date" class="form-control" type="date" name="date">
                             </div>
+
                             <div class="reset-margin-bottom form-group">
                                 <h3>Deliver from:</h3>
                             </div>
+
+
+
                             <div class="form-group">
-                        		<input id="city1" class="form-control" type="text" name="city1" value="CITY">
+                                <div class="">
+                                    <button type="submit" class="btn btn-primary submit-button">LOCALIZE ME!</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                        		<input id="street1" class="form-control" type="text" name="street1" value="STREET">
+
+                              <div id="choose_button" class="form-group">
+                                <input class="form-control" type="button" value="CHOOSE OTHER LOCATION"">
                             </div>
-                            <div class="form-group">
-                        		<input id="number1" class="form-control" type="text" name="number1" value="NUMBER">
-                            </div>
-                            <div class="form-group">
-                        		<input id="postal1" class="form-control" type="text" name="postal1" value="POSTAL CODE">
-                            </div>
+
+                                <div id="div_ctrl" hidden>
+
+                                        <div class="form-group">Start city
+                                            <input id="city1" class="form-control" type="text" name="city2" value="CITY">
+                                        </div>
+                                        <div class="form-group">Start street
+                                            <input id="street1" class="form-control" type="text" name="street2" value="STREET">
+                                        </div>
+                                        <div class="form-group">Start number
+                                            <input id="number1" class="form-control" type="text" name="number2" value="NUMBER">
+                                        </div>
+                                        <div class="form-group">Start postal-code
+                                            <input id="postal1" class="form-control" type="text" name="postal2" value="POSTAL CODE">
+                                        </div>
+
+
+                                </div>
+
                             <div class="reset-margin-bottom form-group">
                                 <h3>Deliver to:</h3>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Target city
                         		<input id="city2" class="form-control" type="text" name="city2" value="CITY">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Target street
                         		<input id="street2" class="form-control" type="text" name="street2" value="STREET">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Target number
                         		<input id="number2" class="form-control" type="text" name="number2" value="NUMBER">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group">Target postal-code
                         		<input id="postal2" class="form-control" type="text" name="postal2" value="POSTAL CODE">
                             </div>
                             <div class="form-group">
@@ -109,5 +130,8 @@
                         </div>
                     </div>
 			</div>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+        <script src="data/FulfillmentOfTheOrder_SenderPage.js"></script>
 	</body>
 </html>
