--- a/LoginPage.html
+++ b/LoginPage.html
@@ -37,12 +37,12 @@
                             </div>
                             <div class="form-group">
                                 <div>
-                                    <button type="submit" class="btn btn-primary submit-button">Login</button>
+                                    <button type="button" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">Login</button>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div>
-                                    <button type="submit" class="btn btn-primary submit-button">Create an account</button>
+                                    <button type="button" onclick="location.href='RegisterPage.html'" class="btn btn-primary submit-button">Create an account</button>
                                 </div>
                             </div>
                             <div class="form-group">
