--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-0 col-md-offset-0">
-                                <button type="submit" class="btn btn-primary submit-button">Sign me up</button>
+                                <button type="button" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">Sign me up</button>
                             </div>
                         </div>
                         <div class="form-group">
