Added Clickable Buttons

--- a/ApplicationRegulationPage.html
+++ b/ApplicationRegulationPage.html
@@ -37,12 +37,12 @@
                             </div>
                             <div class="form-group top-buffer-large">
                                 <div>
-                                    <button type="submit" class="btn btn-primary submit-button">I accept</button>
+                                    <button type="submit" onclick="location.href='RegisterPage.html'" class="btn btn-primary submit-button">I accept</button>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div>
-                                    <button type="submit" class="btn btn-danger submit-button">Are you insane?</button>
+                                    <button type="submit" onclick="location.href='LoginPage.html'" class="btn btn-danger submit-button">Are you insane?</button>
                                 </div>
                             </div>
                             <div>
