--- a/LoginPage.html
+++ b/LoginPage.html
@@ -33,7 +33,7 @@
                         		<input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
                             </div>
                             <div class="form-group">
-                                <h5>Forgot your Password?</h5>
+                                <h5><a href="ForgotPasswordPage.html">Forgot your Password?</a></h5>
                             </div>
                             <div class="form-group">
                                 <div>
