--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="form-group">
                         <label class="checkbox-inline">
-                          <input type="checkbox" id="inlineCheckbox1" value="option1"> Accept Application Regulation
+                          <input type="checkbox" id="inlineCheckbox1" value="option1"> <a href="ApplicationRegulationPage.html">Accept Application Regulation</a>
                         </label>
                         </div>
                         <div class="form-group">
