Changed the Regulation Page

--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -68,13 +68,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                        <label class="checkbox-inline">
-                          <input type="checkbox" id="inlineCheckbox1" value="option1"> <a href="ApplicationRegulationPage.html">Accept Application Regulation</a>
-                        </label>
-                        </div>
-                        <div class="form-group">
                             <div class="col-sm-offset-0 col-md-offset-0">
-                                <button type="button" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">Sign me up</button>
+                                <button type="button" onclick="location.href='ApplicationRegulationpage.html'" class="btn btn-primary submit-button">Sign me up</button>
                             </div>
                         </div>
                         <div class="form-group">
