--- a/ApplicationRegulationPage.html
+++ b/ApplicationRegulationPage.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group top-buffer-large">
                                 <div>
-                                    <button type="submit" onclick="location.href='RegisterPage.html'" class="btn btn-primary submit-button">I accept</button>
+                                    <button type="submit" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">I accept</button>
                                 </div>
                             </div>
                             <div class="form-group">
