Clickable buttons - commit and cancel

--- a/FulfillmentOfTheOrder_DeliverPage.html
+++ b/FulfillmentOfTheOrder_DeliverPage.html
@@ -51,12 +51,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="">
-                                    <button type="submit" class="btn btn-primary submit-button">SUBMIT</button>
+                                    <button type="button" onclick="location.href='SuccesDeliveryPage.html'" class="btn btn-primary submit-button">SUBMIT</button>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="">
-                                    <button type="submit" class="btn submit-button">CANCEL</button>
+                                    <button type="button" onclick="location.href='DeliverPage.html'" class="btn submit-button">CANCEL</button>
                                 </div>
                             </div>
                             <div class="form-group">
