--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -113,12 +113,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="">
-                                    <button type="submit" class="btn btn-primary submit-button">SUBMIT</button>
+                                    <button type="button" onclick="location.href='SuccesSendingPage.html'" class="btn btn-primary submit-button">SUBMIT</button>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="">
-                                    <button type="submit" class="btn submit-button">CANCEL</button>
+                                    <button type="button" onclick="location.href='SenderPage.html'" class="btn submit-button">CANCEL</button>
                                 </div>
                             </div>
                             <div class="form-group">
