Pin all buttons

--- a/SenderPage.html
+++ b/SenderPage.html
@@ -45,10 +45,17 @@
 
                         <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
                             <div class="form-group">
-                                <button id="button" type="submit" >SEND A PACK</button>
+
+
+                                <button id="button" class="btn btn-primary" type="button" onclick="location.href='FulfillmentOfTheOrder_SenderPage.html'">
+                                    SEND A PACK
+                                </button>
                             </div>
+
                             <div class="form-group">
-                                <button id="button" type="submit" >BACK TO LANDING PAGE</button>
+                                <button id="button" class="btn" type="button" onclick="location.href='LandingPage.html'">
+                                    BACK TO LANDING PAGE
+                                </button>
                             </div>
                         </div>
                     </form>
