--- a/DeliverPage.html
+++ b/DeliverPage.html
@@ -45,10 +45,14 @@
 
                         <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
                             <div class="form-group">
-                                <button id="button" type="submit" >SUMBIT YOUR OFFER</button>
+                                <button id="button" class="btn btn-primary" type="button" onclick="location.href='FulfillmentOfTheOrder_DeliverPage.html'" >
+                                    SUMBIT YOUR OFFER
+                                </button>
                             </div>
                             <div class="form-group">
-                                <button id="button" type="submit" >BACK</button>
+                                <button id="button" class="btn" type="button" onclick="location.href='LandingPage.html'">
+                                    BACK TO MAIN MENU
+                                </button>
                             </div>
                         </div>
                     </form>
