--- a/LandingPage.html
+++ b/LandingPage.html
@@ -42,10 +42,14 @@
                         </div>
                         <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
                             <div class="form-group">
-                                <button id="button" type="submit" class="btn btn-primary">SEND A PACK</button>
+                                <button id="button" type="button" onclick="location.href='SenderPage.html'" class="btn btn-primary">
+                                    SEND A PACK
+                                </button>
                             </div>
                             <div class="form-group">
-                                <button id="button" type="submit" class="btn btn-primary">DELIVER A PACK</button>
+                                <button id="button" type="button" onclick="location.href='DeliverPage.html'" class="btn btn-primary">
+                                    DELIVER A PACK
+                                </button>
                             </div>
                         </div>
                     </form>
