--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -14,7 +14,14 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	</head>
+        <script>
+            function goToRegultioPage() {
+                location.href="ApplicationRegulationPage.html";
+                document.getElementById("acceptRegulationChbx").checked = true;
+            }
+        </script>
+    </head>
+
 	<body>
 			<div class="container">
                 <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
@@ -66,6 +73,14 @@
                               <input type="radio" name="gender" id="female" value="female"> Female
                             </label>
                             </div>
+                        </div>
+                        <div class="form-group">
+                            <div class=" col-md-2 ">
+                                <label class="checkbox-inline form-group checkbox-left-position">
+                                    <input id="acceptRegulationChbx"type="checkbox" class="form-control" name="regulation">
+                                </label>
+                            </div>
+                            <button type="button" onclick="goToRegultioPage()" class="btn btn-primary submit-button col-md-8 button-right-position">Accept User's Regulationss</button>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-0 col-md-offset-0">
