--- a/SuccesDeliveryPage.html
+++ b/SuccesDeliveryPage.html
@@ -8,13 +8,17 @@
     <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
     <link href="data/SuccessSending.css" type="text/css" rel="stylesheet"/>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -27,10 +31,8 @@
                 <span class="glyphicon glyphicon-user search"></span>
             </div>
         </div>
-        <hr width="100%" />
-
+        <hr width="100%"/>
         <div class="row top-buffer"></div>
-
 
         <div class="row top-buffer">
             <form class="form-horizontal">
@@ -45,10 +47,14 @@
 
                 <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
                     <div class="form-group">
-                        <button  type="submit" class="btn btn-primary">CONTINUE ORDERING</button>
+                        <button type="button" onclick="location.href='DeliverPage.html'" class="btn btn-primary">
+                            CONTINUE ORDERING
+                        </button>
                     </div>
                     <div class="form-group">
-                        <button  type="submit" class="btn">BACK TO MENU</button>
+                        <button type="button" onclick="location.href='LandingPage.html'" class="btn">
+                            GO TO MAIN MENU
+                        </button>
                     </div>
                 </div>
             </form>
