--- a/SuccesSendingPage.html
+++ b/SuccesSendingPage.html
@@ -45,10 +45,14 @@
 
                 <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
                     <div class="form-group">
-                        <button  type="submit" class="btn btn-primary">CONTINUE SENDING</button>
+                        <button  type="button" onclick="location.href='SenderPage.html'" class="btn btn-primary">
+                            CONTINUE SENDING
+                        </button>
                     </div>
                     <div class="form-group">
-                        <button  type="submit" class="btn">BACK TO MENU</button>
+                        <button type="button" onclick="location.href='LandingPage.html'" class="btn">
+                            BACK TO MAIN MENU
+                        </button>
                     </div>
                 </div>
             </form>
